<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tazar</string>
    
    <!-- Google Maps -->
    <string name="google_maps_key">AIzaSyCexDbGsUt37YhJ7k_2IuwhVFkE2KDjkLM</string>
    
    <!-- Навигация -->
    <string name="nav_home">Главная</string>
    <string name="nav_map">Карта</string>
    <string name="nav_reports">Отчеты</string>
    <string name="nav_profile">Профиль</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    
    <!-- Авторизация -->
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="logout">Выйти</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="no_account_prefix">Нет аккаунта?</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="welcome_back">Добро пожаловать!</string>
    <string name="login_subtitle">Войдите в свой аккаунт, чтобы продолжить</string>
    
    <!-- Разрешения -->
    <string name="permissions_required">Для полной функциональности приложения необходимы все разрешения</string>
    
    <!-- Профиль -->
    <string name="profile_title">Профиль пользователя</string>
    <string name="profile_photo_description">Фото профиля</string>
    
    <!-- Отчеты -->
    <string name="add_report">Добавить отчет</string>
    <string name="report_image_description">Фото отчета</string>
    
    <!-- Сообщения -->
    <string name="welcome_message">Добро пожаловать в Tazar!</string>
    <string name="features_title">Возможности приложения</string>
    <string name="features_description">Сообщайте о местах скопления мусора, находите пункты сбора и участвуйте в экологических мероприятиях.</string>
    <string name="achievements_title">Достижения</string>
    <string name="achievements_description">Получайте достижения за активное участие в улучшении экологической обстановки.</string>
    
    <!-- Ошибки -->
    <string name="error_network">Ошибка сети</string>
    <string name="error_loading">Ошибка загрузки</string>
    <string name="error_empty_fields">Пожалуйста, заполните все поля</string>
    <string name="error_passwords_not_match">Пароли не совпадают</string>
    <string name="error_password_too_short">Пароль должен содержать минимум 8 символов</string>
    <string name="error_ui_init">Ошибка инициализации UI</string>
    <string name="error_app_start">Ошибка при запуске экрана входа</string>
    <string name="error_ui_load">Не удалось загрузить интерфейс приложения</string>
    <string name="error_register_screen">Экран регистрации недоступен</string>
    <string name="error_forgot_password_screen">Экран восстановления пароля недоступен</string>
    <string name="error_main_screen">Ошибка при переходе на главный экран</string>
    <string name="forgot_password_in_development">Функция восстановления пароля в разработке</string>
    
    <!-- Общее -->
    <string name="loading">Загрузка...</string>
    <string name="retry">Повторить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="save">Сохранить</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="reset">Сбросить</string>
    
    <!-- Карта -->
    <string name="map_title">Карта пунктов сбора</string>
    <string name="search_hint">Поиск по адресу</string>
    <string name="waste_type">Тип отходов</string>
    <string name="collection_points">Пункты сбора</string>
    <string name="trash_reports">Сообщения о мусоре</string>
    <string name="add_collection_point">Добавить пункт сбора</string>
    <string name="address">Адрес</string>
    <string name="city">Город</string>
    <string name="plastic">Пластик</string>
    <string name="paper">Бумага</string>
    <string name="metal">Металл</string>
    <string name="glass">Стекло</string>
    
    <!-- Отчет о мусоре -->
    <string name="report_trash">Сообщить о мусоре</string>
    <string name="description">Описание</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_location">Выбрать местоположение</string>
    <string name="submit_report">Отправить сообщение</string>
    <string name="report_success">Сообщение успешно отправлено!</string>
    <string name="report_error">Ошибка при отправке сообщения</string>
    <string name="report_status">Статус сообщения</string>
    <string name="status_new">Новое</string>
    <string name="status_in_progress">В обработке</string>
    <string name="status_completed">Убрано</string>
    <string name="status_rejected">Отклонено</string>
    
    <!-- Достижения -->
    <string name="points_required">Требуется баллов: %d</string>
    <string name="achievement_earned">Получено достижение!</string>
    <string name="achievement_type_reports">За отчеты</string>
    <string name="achievement_type_points">За баллы</string>
    <string name="achievement_type_activity">За активность</string>
    
    <!-- Эко-советы -->
    <string name="eco_tips">Эко-советы</string>
    <string name="category_waste">Отходы</string>
    <string name="category_energy">Энергия</string>
    <string name="category_water">Вода</string>
    <string name="category_transport">Транспорт</string>
    <string name="difficulty_easy">Легко</string>
    <string name="difficulty_medium">Средне</string>
    <string name="difficulty_hard">Сложно</string>
    
    <!-- События и мероприятия -->
    <string name="events">События</string>
    <string name="cleanup_events">Мероприятия по уборке</string>
    <string name="event_details">Детали мероприятия</string>
    <string name="event_date">Дата и время</string>
    <string name="event_location">Место проведения</string>
    <string name="event_organizer">Организатор</string>
    <string name="max_participants">Максимум участников</string>
    <string name="participants">Участники</string>
    <string name="join_event">Присоединиться</string>
    <string name="leave_event">Покинуть</string>
    
    <!-- Настройки -->
    <string name="notification_settings">Настройки уведомлений</string>
    <string name="language">Язык</string>
    <string name="about_app">О приложении</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_service">Условия использования</string>
    <string name="version">Версия</string>
    
    <!-- Настройки API -->
    <string name="api_settings">Настройки API</string>
    <string name="api_url">URL API-сервера</string>
    <string name="current_api_url">Текущий URL: %s</string>
    <string name="api_url_saved">URL API-сервера сохранен</string>
    <string name="api_url_reset">URL API-сервера сброшен к значению по умолчанию</string>
    <string name="api_url_empty">URL API-сервера не может быть пустым</string>
    <string name="api_url_help">Для эмулятора используйте: http://10.0.2.2:8000/\nДля реального устройства: http://[IP вашего компьютера]:8000/</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="enable_report_notifications">Уведомления о статусе отчетов</string>
    <string name="enable_achievement_notifications">Уведомления о достижениях</string>
    <string name="app_description">Tazar Mobile - мобильное приложение для экологического проекта Tazar, позволяющее сообщать о местах скопления мусора, находить точки сбора различных видов отходов, получать достижения и многое другое.</string>
    <string name="version_info">Версия: 1.0.0</string>
    <string name="settings">Настройки</string>
    <string name="rating">Рейтинг: %d</string>
    <string name="rating_label">Рейтинг</string>
    <string name="achievements_label">Достижения</string>
    <string name="achievements_count">Достижений: %d</string>
    <string name="add_trash_report">Добавить сообщение о мусоре</string>
    
    <!-- Уведомления -->
    <string name="points_channel_name">Баллы</string>
    <string name="points_channel_description">Уведомления о пополнении баллов</string>
    <string name="points_added_notification_title">Баллы начислены!</string>
    <string name="points_added_notification_text">Вам начислено %d баллов</string>
    <string name="avatar_description">Аватар пользователя</string>
    <string name="username_label">Имя пользователя:</string>
    <string name="email_label">Email:</string>
    
    <!-- Новости -->
    <string name="news_image_description">Изображение новости</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="news_section_title">Экологические новости</string>
    <string name="news_detail">Новость</string>
    <string name="share">Поделиться</string>
    <string name="share_news">Поделиться новостью</string>
    <string name="no_image_available">Нет изображения</string>
    
    <!-- Новый ресурс -->
    <string name="date_not_available">Дата не указана</string>
    
    <!-- Settings -->
    <string name="api_url_settings">Настройки API</string>
    <string name="enter_api_url">Введите URL API</string>
    <string name="theme">Тема</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Темная</string>
    <string name="theme_system">Системная</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="error_loading_recycling_points">Ошибка при загрузке пунктов приема</string>
    <string name="create_report">Создать отчет</string>
    
    <!-- Боковое меню -->
    <string name="guest_user">Гость</string>
    <string name="guest_email">Войдите, чтобы увидеть свой профиль</string>
    
    <!-- Пункты меню -->
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_section_other">Дополнительно</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_help">Помощь</string>
    
    <!-- Нижняя навигация -->
    <string name="title_home">Главная</string>
    <string name="title_map">Карта</string>
    <string name="title_reports">Отчеты</string>
    
    <!-- Другие строки -->
    <string name="nav_header_desc">Фото профиля</string>
    
    <!-- Новые строки -->
    <string name="points_format">%d баллов</string>
</resources> 